minor fixes in basics/edge-detection

--- a/doc/hyphenation.tex
+++ b/doc/hyphenation.tex
@@ -7,6 +7,7 @@
   Bild-aus-schnitt
   Farb-ko-die-rung
   Ini-ti-ali-sie-rung
+  Kan-ten-ope-ra-tor
   Me-tho-de
   mi-ni-mal-er
   Scan-line-ver-fahr-ens
