--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -1,9 +1,8 @@
 \section{Kantenerkennung}
 \label{sec:edge-detection}
 \writtenby{\dcauthornameewie}%
-Kanten in einem Bild zeigen sich durch abrupte Helligkeitsänderungen zwischen benachbarten Pixeln.
-Um die Helligkeitsänderung für jedes Pixel zu bestimmen muss der Gradient der Helligkeitsfunktion $\nabla I$ eines Bildes berechnet werden.
-Das gängigste Verfahren zur Bestimmung des Gradienten ist dessen Annäherung durch Faltung des Bildes $I$ mit einer Faltungsmatrix $K$ (in diesem Zusammenhang auch Kantenoperator genannt).
+Kanten in einem Bild zeigen sich durch abrupte Helligkeitsänderungen zwischen benachbarten Pixeln.Um die Helligkeitsänderung für jedes Pixel zu bestimmen muss der Gradient der Helligkeitsfunktion~$\nabla I$ eines Bildes berechnet werden.
+Das gängigste Verfahren zur Bestimmung des Gradienten ist dessen Annäherung durch Faltung des Bildes~$I$ mit einer Faltungsmatrix~$K$~(in diesem Zusammenhang auch Kantenoperator genannt).
 \begin{equation}
   (I\circ K)(x,y) =
        \sum_{(u,v)\in m\times n}
@@ -22,11 +21,11 @@ wobei die einfachere Formel
 \begin{equation}
   \nabla I(x,y) = |(I \circ K_X)(x,y)| + |(I \circ K_Y)(x,y)|
 \end{equation}
-ebenfalls eine gute Annäherung bietet \cite[Kapitel~5.2]{davies2012}.
+ebenfalls eine gute Annäherung bietet~\cite[Kapitel~5.2]{davies2012}.
 
 \subsection*{Roberts-Operator}
-Der Ursprung des \surname{Roberts}-Operators \cite[S.~26]{roberts1963} ist die Kantenerkennung in technischen Strichzeichnungen.
-Im vergleich zu anderen Operatoren erzeugt er dünnere Kanten.
+Der Ursprung des \surname{Roberts}-Operators~\cite[S.~26]{roberts1963} ist die Kantenerkennung in technischen Strichzeichnungen.
+Im Vergleich zu anderen Operatoren erzeugt er dünnere Kanten.
 Hat dadurch aber den Vorteil Bildrauschen weniger stark als Kanten zu erfassen.
 \begin{equation}
   K_X = \begin{vmatrix}
@@ -41,7 +40,7 @@ Hat dadurch aber den Vorteil Bildrauschen weniger stark als Kanten zu erfassen.
 \end{equation}
 
 \subsection*{Prewitt-Operator}
-Der \surname{Prewitt}-Operator \cite[S.~108]{prewitt1070} erzeugt bereits dickere Kanten, und ist noch nicht so anfällig für Bildrauschen.
+Der \surname{Prewitt}-Operator~\cite[S.~108]{prewitt1070} erzeugt bereits dickere Kanten und ist noch nicht so anfällig für Bildrauschen.
 \begin{equation}
   K_X = \begin{vmatrix}
     -1 & 0 & 1 \\
@@ -57,7 +56,7 @@ Der \surname{Prewitt}-Operator \cite[S.~108]{prewitt1070} erzeugt bereits dicker
 \end{equation}
 
 \subsection*{Sobel-Operator}
-Der \surname{Sobel}-Operator \cite[Kapitel~5.2]{davies2012} unterscheidet sich kaum vom \surname{Prewitt}-Operator.
+Der \surname{Sobel}-Operator~\cite[Kapitel~5.2]{davies2012} unterscheidet sich kaum vom \surname{Prewitt}-Operator.
 Jedoch ist er bereits empfindlicher gegenüber Rauschen.
 \begin{equation}
   K_X = \begin{vmatrix}
@@ -74,7 +73,7 @@ Jedoch ist er bereits empfindlicher gegenüber Rauschen.
 \end{equation}
 
 \subsection*{Scharr-Operator}
-Der \surname{Scharr}-Operator \cite[Kapitel~9.3]{scharr2000} ist eine Weiterentwicklung des \surname{Sobel}-Operators mit besserer Rotationssymmetrie, erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
+Der \surname{Scharr}-Operator~\cite[Kapitel~9.3]{scharr2000} ist eine Weiterentwicklung des \surname{Sobel}-Operators mit besserer Rotationssymmetrie, erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
 \begin{equation}
   K_X = \begin{vmatrix}
      -3 & 0 &  3 \\
@@ -97,7 +96,7 @@ Der \surname{Scharr}-Operator \cite[Kapitel~9.3]{scharr2000} ist eine Weiterentw
   \includegraphics[width=0.1925\textwidth]{img/basics/edge-detection/prewitt}
   \includegraphics[width=0.1925\textwidth]{img/basics/edge-detection/sobel}
   \includegraphics[width=0.1925\textwidth]{img/basics/edge-detection/scharr}
-  \caption[Kantenerkennung]{Kantenerkennung eines Bildes\protect\footnotemark~(a) mit \surname{Roberts}-Operator (b), \surname{Prewitt}-Operator (c), \surname{Sobel}-Operator (d), und \surname{Scharr}-Operator (e) unter Verwendung der oben genannten Operatoren.}
+  \caption[Kantenerkennung]{Kantenerkennung eines Bildes\protect\footnotemark~(a) mit \surname{Roberts}-Operator~(b), \surname{Prewitt}-Operator~(c), \surname{Sobel}-Operator~(d), und \surname{Scharr}-Operator~(e) unter Verwendung der oben genannten Operatoren.}
 \end{figure}
 
 \footnotetext{\url{http://www.publicdomainpictures.net/view-image.php?image=1816}}
