--- a/doc/tex/basics/segmentation.tex
+++ b/doc/tex/basics/segmentation.tex
@@ -21,15 +21,15 @@ Wobei die häufigste Anwendung die Einteilung eines Bildes in zwei Klassen, z.B.
     1 & I(x,y) \geq t
   \end{cases}
 \end{equation}
-Die Berechnung des Schwellwerts $t$ ist dabei entscheidend für die Qualität der Segmentierung, d.h. dass Bildelemente korrekt klassifiziert werden.
+Die Berechnung des Schwellwerts~$t$ ist dabei entscheidend für die Qualität der Segmentierung, d.h. dass Bildelemente korrekt klassifiziert werden.
 
 \subsection*{Schwellwertbestimmung}
 Da die Wahl des Schwellwertes ausschlaggebend für die Genauigkeit der Klassifizierung ist, existieren diverse Algorithmen.
-Diese machen sich zum Teil bestimmte Eigenschaften eines Bildes zu nutze und sind daher nur für eine bestimmte Klasse von Bildern geeignet, nämlich solche die jene Eigenschaften erfüllen.
+Diese machen sich zum Teil bestimmte Eigenschaften eines Bildes zu nutze und sind daher nur für eine bestimmte Art von Bildern geeignet, nämlich solche die jene Eigenschaften erfüllen.
 
 \subsubsection*{Mittelwert}
 Nutzt den Mittelwert der Helligkeit aller Bildpunkte als Schwellwert.
-Der ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeits bereits deutlich vom Hintergrund abheben.
+Der ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeit bereits deutlich vom Hintergrund abheben.
 Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeitsverteilung der Bildpunkte nicht berücksichtigt.
 \begin{equation}
   t = \frac{1}{N} \sum_{x,y} I(x,y), \quad N = \sum_{x,y} 1
@@ -40,11 +40,13 @@ Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeits
 %\todo[author=\dcauthornameewie]{Iteratives Verfahren}
 
 \subsubsection*{Otsu's Methode}
-\surname{Otsu}'s Methode \cite{otsu1979} ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
+\surname{Otsu}'s Methode~\cite{otsu1979} ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung voraussetzt.
+Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrunds bzw. Vordergrunds entsprechen.
+Der optimale Schwellwert liegt im Tal zwischen den Maxima.
 Der Algorithmus sucht den Schwellwert, der die Varianz innheralb der beiden Klassen minimiert.
 
 \subsubsection*{Balanced Histogram Thresholding}
-Das Balanced Histogram Thresholding \cite{DBLP:conf/biostec/AnjosS08} erwartet, wie \surname{Otsu}'s Methode, eine bimodale Helligkeitsverteilung.
+Das Balanced Histogram Thresholding~\cite{DBLP:conf/biostec/AnjosS08} erwartet, wie \surname{Otsu}'s Methode, eine bimodale Helligkeitsverteilung.
 Das Verfahren ermittelt den Schwellwert derart, dass dieser das Histogramm in zwei gleich "`schwere"' Hälften teilt.
 Als Maß für das Gewicht einer Hälfte dient die Summe der absoluten Häufigkeiten aller Klassen der betrachteten Hälfte.
 Von der schwereren Häfte wird solange die äußere Klasse entfernt bis nur noch eine Klasse übrig ist, welche dem gesuchten Schwellwert entspricht.
@@ -54,14 +56,14 @@ Die Berechnung und Anwendung eines Schwellwertes ist nicht auf das Gesamtbild be
 
 \subsubsection*{Statisches Thresholding}
 Der Schwellwert wird für das gesamte Bild einmalig berechnet und auf alle Bildpunkte angewandt.
-Die Verwendung eines einzelnen Schwellwertes für das gesamte Bild funkioniert nur sofern das Bild gleichmäßig belichtet ist \cite[Kapitel~4.3]{davies2012}.
+Die Verwendung eines einzelnen Schwellwertes für das gesamte Bild funkioniert nur sofern das Bild gleichmäßig belichtet ist~\cite[Kapitel~4.3]{davies2012}.
 Ansonsten kann es vorkommen, zu dunkle Bildteile, aufgrund zu geringer Belichtung, als Hintergrund zu klassifizieren da diese unterhalb des Schwellwertes liegen.
 
 \subsubsection*{Dynamisches Thresholding}
-Adaptives Thresholding ermöglicht es Bilder mit ungleichmäßiger Beleuchtung besser zu Segmentieren.
-Eine Möglichkeit ist es das Bild in Rechtecke zu unterteilen und auf jede Region das statische Thresholding anzuwenden \cite[S.~88--89]{davies2012}.
+Dynamisches Thresholding ermöglicht es Bilder mit ungleichmäßiger Beleuchtung besser zu Segmentieren.
+Eine Möglichkeit ist es das Bild in Rechtecke zu unterteilen und auf jede Region das statische Thresholding anzuwenden~\cite[S.~88--89]{davies2012}.
 Dabei kann es an den Regionsgrenzen zu unterschiedlichen Klassifikationen kommen.
-Ein besseres Verfahren stellt die Berechnung eines individuellen Schwellwertes für jeden Bildpunkt, unter Betrachtung seiner Umgebung, dar \cite[Kapitel~4.4.2]{davies2012}.
+Ein besseres Verfahren stellt die Berechnung eines individuellen Schwellwertes für jeden Bildpunkt, unter Betrachtung seiner Umgebung, dar~\cite[Kapitel~4.4.2]{davies2012}.
 
 \begin{figure}[H]
   \label{fig:segmentation}
@@ -86,5 +88,5 @@ Ein besseres Verfahren stellt die Berechnung eines individuellen Schwellwertes f
     \includegraphics[width=\linewidth]{img/basics/segmentation/dynamic}
     \caption{dynamisch, Betrachtung einer 3$\times$3 Nachbarschaft}
   \end{subfigure}
-  \caption[Vergleich von Thresholding Varianten]{Vergleich von Thresholding Varianten für Text bei ungleichmäßiger Belichtung. Als Schwellwert dient jeweils der oben beschriebene Mittelwert.}
+  \caption[Vergleich von Thresholding-Varianten]{Vergleich von Thresholding-Varianten für Text bei ungleichmäßiger Belichtung. Als Schwellwert dient jeweils der oben beschriebene Mittelwert.}
 \end{figure}
