minor fixes in basics/filters addressing wording, hyphenation and overfull lines

--- a/doc/hyphenation.tex
+++ b/doc/hyphenation.tex
@@ -1,15 +1,19 @@
 \hyphenation{
+  ab-ge-schwächt
   an-sons-ten
   Ä-qui-va-lenz-en
   aus-schlie-ßen
   be-stimmt
   be-trach-te-ten
   Bild-aus-schnitt
+  ent-spre-chen-de
   Farb-ko-die-rung
   Ini-ti-ali-sie-rung
   Kan-ten-ope-ra-tor
+  ma-the-ma-tisch-en
   Me-tho-de
   mi-ni-mal-er
+  Pi-xel-wer-ten
   Scan-line-ver-fahr-ens
   zu-sätz-lich-e
 }
