fix design of algorithm in techniques/region-extraction

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -54,9 +54,11 @@
 
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
+\usepackage{algorithm}
 
 \renewcommand{\algorithmicrequire}{\textbf{Eingabe:}}
 \renewcommand{\algorithmicensure}{\textbf{Ausgabe:}}
+\floatname{algorithm}{Algorithmus}
 
 \usepackage{todonotes}
 
