little visual problems corrected

--- a/doc/tex/barcodes/libraries.tex
+++ b/doc/tex/barcodes/libraries.tex
@@ -1,6 +1,6 @@
 \section{Strichcode Bibliotheken}
 \writtenby{\dcauthornameriren}%
-Im Internet existieren viele verschiedene Bibliotheken zur Generierung und Dekodierung von Strichcodes aller Arten. Deshalb werden hier einige davon aufgeführt und es wird darauf eingegangen, warum ZXing genutzt wird.
+Im Internet existieren viele verschiedene Bibliotheken zur Generierung und Dekodier\-ung von Strichcodes aller Arten. Deshalb werden hier einige davon aufgeführt und es wird darauf eingegangen, warum ZXing genutzt wird.
 
 
 \subsection*{Open-Source Strichcode Generatoren}
@@ -21,13 +21,13 @@ Unter \url{http://www.terryburton.co.uk/barcodewriter/generator} kann man online
 \subsection*{Open-source Barcode Scanner}
 Für die Erkennung von Strichcodes gibt es einige gute Open-Source Bibliotheken, wobei hier nur die vom genannten Funktionsumfang größten kurz untersucht werden.
 
-\paragraph*{ZXing('Zebra Crossing')}
-\label{par:zxing}
-Die Bibliothek ZXing('Zebra Crossing') besitzt einen riesigen Funktionsumfang, unter den durch sie unterstützten Codes sind z.B. UPC-A/UPC-E, EAN-8/EAN-13, Code 39, Code 128, ITF, Codabar, RSS-14(alle Varianten), QR Code und Data Matrix. Zusätzlich können diese Strichcodes auch mit ZXing generiert werden. Weiter Pluspunkte sind, dass ZXing in Java geschrieben ist und unter der 'Apache License v2.0' zur Verfügung gestellt wird. Dadurch lässt sie sich nahtlos in die Software der Professur Medieninformatik integrieren. Ihr Quellcode kann hier gefunden werden:\\
+\paragraph*{ZXing ('Zebra Crossing')}
+\label{sec:zxing}
+Die Bibliothek ZXing ('Zebra Crossing') besitzt einen riesigen Funktionsumfang, unter den durch sie unterstützten Codes sind z.B. UPC-A/UPC-E, EAN-8/EAN-13, Code 39, Code 128, ITF, Codabar, RSS-14 (alle Varianten), QR Code und Data Matrix. Zusätzlich können diese Strichcodes auch mit ZXing generiert werden. Weiter Pluspunkte sind, dass ZXing in Java geschrieben ist und unter der 'Apache License v2.0' zur Verfügung gestellt wird. Dadurch lässt sie sich nahtlos in die Software der Professur Medieninformatik integrieren. Ihr Quell\-code kann hier gefunden werden:\\
 \url{http://code.google.com/p/zxing}
 
 \paragraph*{ZBar}
-ZBar erkennt auch einen großen Anteil an Strichcodes und ist betriebssystemunabhängig in C geschrieben, wobei es sogar Schnittstellen zu C++, Perl und Python besitzt. Einige der erkannten Codes sind z.B. EAN-13/UPC-A, UPC-E, EAN-8, Code 128, Code 39, Interleaved 2 of 5 and QR Code. ZBar steht unter der 'GNU LGPL 2.1' und mehr Informationen findet man unter:\\
+ZBar erkennt auch einen großen Anteil an Strichcodes und ist betriebssystem\-unabhängig in C geschrieben, wobei es sogar Schnittstellen zu C++, Perl und Python besitzt. Einige der erkannten Codes sind z.B. EAN-13/UPC-A, UPC-E, EAN-8, Code 128, Code 39, Interleaved 2 of 5 and QR Code. ZBar steht unter der 'GNU LGPL 2.1' und mehr Informationen findet man unter:\\
 \url{http://zbar.sourceforge.net}.
 
 \paragraph*{BarBara Barcode Library}
