--- a/doc/tex/barcodes/thecodes.tex
+++ b/doc/tex/barcodes/thecodes.tex
@@ -1,6 +1,6 @@
 \section{Einige Strichcodes}
 \writtenby{\dcauthornameriren}%
-Um die eigentliche Aufgabe etwas genauer zu beleuchten, werden hier 2 unterschiedliche Strichcodearten repräsentativ vorgestellt. Als erstes der einfach aufgebaute Code 39, als Repräsentant der 1D Strichcodes, und als zweites der QR-Code, der meist genutzte 2D Strichcode.
+Um die eigentliche Aufgabe etwas genauer zu beleuchten, werden hier 2 unterschied\-liche Strichcodearten repräsentativ vorgestellt. Als erstes der einfach aufgebaute Code 39, als Repräsentant der 1D Strichcodes, und als zweites der QR-Code, der meist genutzte 2D Strichcode.
 
 \input{tex/barcodes/thecodes/code39}
 \input{tex/barcodes/thecodes/qr}
