--- a/doc/tex/classes/improveimage.tex
+++ b/doc/tex/classes/improveimage.tex
@@ -28,7 +28,7 @@ Durch die Methode 'hasShade', aus ImageProcessing, wird überprüft, ob das Bild
 
 \subsection*{Methode checkImage}
 Diese Methode erhält ein Eingabebild und verbessert es so gut es geht.
-Dabei wird als erstes die Helligkeit überprüft('checkBrightness'), da sie nur positive Auswirkungen auf die folgenden Untersuchungen hat.
-Darauf folgt die Untersuchung auf Schatten('checkShadow'), da diese schlecht auf Umgebungen um den Strichcode reagiert und durch die Rotation möglicherweise ein Rahmen entstehen kann.
-Als nächstes wird das Bild rotiert('checkRotation'), weil dies vor dem Schärfen passieren muss, da das Bild durch die Rotation immer etwas unschärfer wird.
-Der letzte Punkt ist dann die Schärfung('checkBlur').
+Dabei wird als erstes die Helligkeit überprüft ('checkBrightness'), da sie nur positive Auswirkungen auf die folgenden Untersuchungen hat.
+Darauf folgt die Untersuchung auf Schatten~('checkShadow'), da diese schlecht auf Umgebungen um den Strichcode reagiert und durch die Rotation möglicherweise ein Rahmen entstehen kann.
+Als nächstes wird das Bild rotiert ('checkRotation'), weil dies vor dem Schärfen passieren muss, da das Bild durch die Rotation immer etwas unschärfer wird.
+Der letzte Punkt ist dann die Schärfung ('checkBlur').
