--- a/doc/tex/classes/usedlibraries.tex
+++ b/doc/tex/classes/usedlibraries.tex
@@ -3,7 +3,7 @@ In diesem Bereich werden die Bibliotheken kurz vorgestellt, deren Funktionen fü
 
 
 \subsection*{ZXing}
-Wie bereits in Kapitel \ref{sec:zxing} beschrieben, ist diese Bibliothek für das Decodieren der Strichcodes verantwortlich.
+Wie bereits in Kapitel \ref{par:zxing} beschrieben, ist diese Bibliothek für das Decodieren der Strichcodes verantwortlich.
 
 
 \subsection*{BoovCV}
