--- a/doc/tex/evaluation/zxing/qr.tex
+++ b/doc/tex/evaluation/zxing/qr.tex
@@ -47,7 +47,7 @@ Die allgemeine Dunkelheit des Bildes, durch die der Kontrast sinkt, scheint kaum
   \includegraphics[height=0.3\textwidth]{img/QR/dark_03_98.jpg}
   \includegraphics[height=0.3\textwidth]{img/QR/dark_04_90.jpg}
   \includegraphics[height=0.3\textwidth]{img/QR/blurrydarkrotate_03_3_90_35.jpg}
-  \caption{Dekodierbare Bilder: normal bei 98\%, mit Bild bei 90\% und rotiert+unscharf bei 90\% Abdunkelung}
+  \caption{Abgedunkelte Bilder: Bei 98\%, mit Bild bei 90\%, rotiert+unscharf bei 90\%}
   \label{fig:qrdark}
 \end{figure}
 
