--- a/doc/tex/introduction/motivation.tex
+++ b/doc/tex/introduction/motivation.tex
@@ -1,7 +1,2 @@
 \section{Motivation}
-In der heutigen Gesellschaft haben Strichcodes immer größere Bedeutung.
-Nicht nur in der Wirtschaft, sondern auch im alltäglichen Leben haben viele Menschen mit ihnen zu tun.
-Sie können bereits mit dem Handy gescannt und ausgelesen werden, was auch oft für Werbezwecke benutzt wird.
-Die Erkennung der Codes ist bereits gut entwickelt, aber die Bildqualität kann die Lesbarkeit oft verringern.
-Daher ist es sinnvoll das Auffinden von Barcodes in Bildern und Videos, sowie die Bildaufbereitung für Bilder von schlechter Qualität und unter schlechten Umständen aufgenommenen Bildern, zu verbessern.
-
+In der heutigen Gesellschaft haben Strichcodes immer größere Bedeutung. Nicht nur in der Wirtschaft, sondern auch im alltäglichen Leben haben viele Menschen mit ihnen zu tun. Sie können sogar bereits mit Handys gescannt und ausgelesen werden, was auch oft für Werbezwecke benutzt wird. Die Erkennung der Codes ist dabei zwar bereits gut entwickelt, aber die Bildqualität kann oft die Lesbarkeit verringern. Daher ist es sinnvoll die Strichcodefindung, in Bildern und Videos, und die Bildaufbereitung, für Bilder von schlechter Qualität und unter schlechten Umständen aufgenommenen Bildern, zu verbessern.
