--- a/doc/tex/evaluation/zxing/ean13.tex
+++ b/doc/tex/evaluation/zxing/ean13.tex
@@ -1,9 +1,9 @@
 \subsection*{EAN-13 Code}
 \writtenby{\dcauthornameriren}%
 % normale
-Strichcodes sind sich im Allgemeinen sehr ähnlich und unterscheiden sich maximal durch die Strichbreite und -länge. Die Länge ist allerdings für die aktuelle Untersuchung nicht von Interesse, denn diese bietet maximal eine leichte Fehlertoleranz, aber keinen Unterschied in der Erkennungsleistung. Die Strichbreite dagegen ermöglicht eine höhere Robustheit in der Erkennung. Daher untersuchen wir, wie in Abbildung \ref*{fig:eannormal} Bild 1 und 2 zu sehen ist, nur 2 unterschiedliche Strichstärken. 
+Strichcodes sind sich im Allgemeinen sehr ähnlich und unterscheiden sich maximal durch die Strichbreite und -länge. Die Länge ist allerdings für die aktuelle Unter\-suchung nicht von Interesse, denn diese bietet maximal eine leichte Fehlertoleranz, aber keinen Unterschied in der Erkennungsleistung. Die Strichbreite dagegen ermöglicht eine höhere Robustheit in der Erkennung. Daher untersuchen wir, wie in Abbild\-ung \ref*{fig:eannormal} Bild 1 und 2 zu sehen ist, nur 2 unterschiedliche Strichstärken. 
 
-Strichcodes besitzen keine große Fehlertoleranz, wie z.B. QR-Codes, aber sie besitzen trotzdem einen großen Vorteil, nämlich dass eine gute Scanline für die Erkennung ausreicht, wie z.B. in Abbildung \ref*{fig:eannormal} Bild 3.
+Strichcodes besitzen keine große Fehlertoleranz, wie z.B. QR-Codes, aber sie besitz\-en trotzdem einen großen Vorteil, nämlich dass eine gute Scanline für die Erkennung ausreicht, wie z.B. in Abbildung \ref*{fig:eannormal} Bild 3.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.30\textwidth]{img/EAN13/perfect_01.jpg}
@@ -24,7 +24,7 @@ Bei unscharfen Bildern macht sich die Strichbreite sofort bemerkbar, denn für d
 \end{figure}
 
 % rotierte
-Das Problem von um $\alpha$ rotierten 1D Strichcodes ist, dass durch die Pixelbilder nie glatte Kanten entstehen können und somit keine sinnvolle Scanline gefunden werden kann oder sogar eine falsche erhalten wird(Abbildung \ref*{fig:eanrotate} Bild 3). Das zeigt sich vor allem bei Codes mit kürzeren Strichen, da dann weniger Platz für eine mögliche Scanline vorhanden ist, die zufällig die richtigen Entfernung erhalten hat. Daher kann auch der Beispielcode mit den längeren Strichen weiter gedreht werden, wie in Abbildung \ref*{fig:eanrotate} zu sehen ist. Außerdem kann dort zusätzlich die Symmetrie der Erkennung von 1D Strichcodes bemerkt werden, da Codes auch bei $180^\circ \pm \alpha$ lesbar sind, wenn sie es bei $\alpha$ sind.
+Das Problem von um $\alpha$ rotierten 1D Strichcodes ist, dass durch die Pixelbilder nie glatte Kanten entstehen können und somit keine sinnvolle Scanline gefunden werden kann oder sogar eine falsche erhalten wird (Abbildung \ref*{fig:eanrotate} Bild 3). Das zeigt sich vor allem bei Codes mit kürzeren Strichen, da dann weniger Platz für eine mögliche Scanline vorhanden ist, die zufällig die richtigen Entfernung erhalten hat. Daher kann auch der Beispielcode mit den längeren Strichen weiter gedreht werden, wie in Abbildung \ref*{fig:eanrotate} zu sehen ist. Außerdem kann dort zusätzlich die Symmetrie der Erkennung von 1D Strichcodes bemerkt werden, da Codes auch bei $180^\circ \pm \alpha$ lesbar sind, wenn sie es bei $\alpha$ sind.
 
 Bei rotierten Codes wirkt sich die unschärfe der Bilder nicht wesentlich auf die Erkennung aus, der Unschärfegrad ist genauso hoch möglich, wie ohne Drehung.
 \begin{figure}[H]
