little errors fixed

--- a/doc/tex/barcodes/libraries.tex
+++ b/doc/tex/barcodes/libraries.tex
@@ -22,7 +22,7 @@ Unter \url{http://www.terryburton.co.uk/barcodewriter/generator} kann man online
 Für die Erkennung von Strichcodes gibt es einige gute Open-Source Bibliotheken, wobei hier nur die vom genannten Funktionsumfang größten kurz untersucht werden.
 
 \paragraph*{ZXing ('Zebra Crossing')}
-\label{sec:zxing}
+\label{par:zxing}
 Die Bibliothek ZXing ('Zebra Crossing') besitzt einen riesigen Funktionsumfang, unter den durch sie unterstützten Codes sind z.B. UPC-A/UPC-E, EAN-8/EAN-13, Code 39, Code 128, ITF, Codabar, RSS-14 (alle Varianten), QR Code und Data Matrix. Zusätzlich können diese Strichcodes auch mit ZXing generiert werden. Weiter Pluspunkte sind, dass ZXing in Java geschrieben ist und unter der 'Apache License v2.0' zur Verfügung gestellt wird. Dadurch lässt sie sich nahtlos in die Software der Professur Medieninformatik integrieren. Ihr Quell\-code kann hier gefunden werden:\\
 \url{http://code.google.com/p/zxing}
 
