--- a/doc/tex/classes/extractor/barcodereader.tex
+++ b/doc/tex/classes/extractor/barcodereader.tex
@@ -1,5 +1,12 @@
 \subsection{Interface \code{BarcodeReader}}
 Die Funktion eines \code{BarcodeReader} liegt im Lesen von Barcodes in einem Bild.
 Die Implementierung \code{DefaultBarcodeReader} verwendet ZXing~(siehe \autoref{par:zxing}) zum Dekodieren der Barcodes.
-\elasticfigure{img/uml/uml.147}{Klassendiagramm von \code{DefaultBarcodeReader}}
+%\elasticfigure{img/uml/uml.147}{Klassendiagramm von \code{DefaultBarcodeReader}}
+
+
+\begin{figure}[h]
+  \centering
+  \elasticgraphic{img/uml/uml.147}
+  \caption{Klassendiagramm von \code{DefaultBarcodeReader}}
+\end{figure}
 
