--- a/doc/tex/classes/job.tex
+++ b/doc/tex/classes/job.tex
@@ -1,7 +1,7 @@
 \section{Klasse \code{Job}}
-Die Klasse \code{Job} kapselt die Bildquelle~(\code{getSource()}) und erzeugt fortlaufend nummerierte Extractions~(\code{createExtraction()}).
-Zudem stellt es für die Extractions ein URL Template~(\code{getExtractionUrlTemplate()}) zur Verfügung um jeder Extraction eine URL zuzuordnen die zur Speicherung der Extraction nötig ist.
-Durch die Initialisierung eines Jobs mit einer optionalen Framenummer~\code{initialFrameNumber} ist es möglich die Verarbeitung eines Jobs an einer gewünschten Stelle wieder aufzunehmen.
+Die Klasse \code{Job} kapselt die Bildquelle~(Methode \code{getSource}) und erzeugt fortlaufend nummerierte Extractions~(Methode \code{createExtraction}).
+Zudem stellt es für die Extractions ein URL Template~(Methode \code{getExtractionUrlTemplate}) zur Verfügung um jeder Extraction eine URL zuzuordnen die zur Speicherung der Extraction nötig ist.
+Durch die Initialisierung eines Jobs mit einer optionalen Framenummer~(Parameter \code{initialFrameNumber}) ist es möglich die Verarbeitung eines Jobs an einer gewünschten Stelle wieder fortzusetzen.
 
 \elasticfigure{img/uml/uml.115}{Klassendiagramm von \code{Job}}
 
