--- a/doc/tex/classes/serialization.tex
+++ b/doc/tex/classes/serialization.tex
@@ -14,5 +14,9 @@ Das Schema kann auch über eine URL mittels der Methode \code{setSchemaLocation}
 Ist die URL des Schemas bekannt, so kann diese bei der Serialisierung mit ausgegeben\footnote{\url{http://www.w3.org/TR/xmlschema-1/\#xsi_schemaLocation}} werden.
 Die Methode \code{setUrlContext} setzt den URL-Kontext um relative URLs (z.B. relative Dateipfade) auflösen zu können.
 
-\elasticfigure{img/uml/uml.150}{Klassendiagram von \code{XmlSerialzer}}
+\begin{figure}[h]
+  \centering
+  \elasticgraphic{img/uml/uml.150}
+  \caption{Klassendiagramm von \code{XmlSerialzer}}
+\end{figure}
 
