--- a/doc/tex/classes/source.tex
+++ b/doc/tex/classes/source.tex
@@ -1,5 +1,5 @@
 \section{Klasse \code{Source}}
-Das Klasse \code{Source} stellt eine Bildquelle dar, die ein Objekt erzeugen kann welches Bilder bereitstellt~(\code{createImageProvider()}).
+Das Klasse \code{Source} stellt eine Bildquelle dar, die ein Objekt erzeugen kann welches Bilder bereitstellt~(Methode \code{createImageProvider}).
 Eine konkrete Bildquelle kapselt dazu die Informationen die zur Erzeugung einer Bildquelle nötig sind (z.B. die URL einer Videoresource).
 
 \elasticfigure{img/uml/uml.119}{Klassendiagramm von \code{Source}}
